# ClientConnect

./: .gitignore  Build.ps1  CMakeLists.txt  Jenkinsfile  README.md  build.linux.sh  build.mac.sh
HiveMP.ClientConnect/: CMakeLists.txt  connect.cpp  connect.h  connect.hpp  connect.impl.cpp  connect.impl.h  vfiles.cpp  vfiles.h
HiveMP.ClientConnect/lua-curl/: lcopteasy.h
HiveMP.ClientConnect/lua-ffi/: ffi.c  ffi.h
HiveMP.SteamTest/: CMakeLists.txt  CopySteamApiDlls.ps1  main.cpp  steam.lua  test.lua
toolchain/: Linux-i386.cmake  Linux-x86_64.cmake
