add_executable(HiveMP.SteamTest main.cpp)

target_link_libraries(HiveMP.SteamTest LINK_PUBLIC HiveMP.ClientConnect)

if(LINUX)
  set(SUBDIR "")
else()
  set(SUBDIR "Release/")
endif()

configure_file(json.lua ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${SUBDIR}json.lua COPYONLY)
configure_file(test.lua ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${SUBDIR}test.lua COPYONLY)
configure_file(steam.lua ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${SUBDIR}steam.lua COPYONLY)
configure_file(steam_appid.txt ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${SUBDIR}steam_appid.txt COPYONLY)
configure_file(../HiveMP.ClientConnect/lua-curl/lua/cURL.lua ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${SUBDIR}cURL.lua COPYONLY)
configure_file(../HiveMP.ClientConnect/lua-curl/lua/cURL/utils.lua ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${SUBDIR}cURL/utils.lua COPYONLY)
configure_file(../HiveMP.ClientConnect/lua-curl/lua/cURL/safe.lua ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${SUBDIR}cURL/safe.lua COPYONLY)
configure_file(../HiveMP.ClientConnect/lua-curl/lua/cURL/impl/cURL.lua ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${SUBDIR}cURL/impl/cURL.lua COPYONLY)

if(WIN32)
  configure_file(steam_api.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${SUBDIR}steam_api.dll COPYONLY)
  configure_file(steam_api64.dll ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${SUBDIR}steam_api64.dll COPYONLY)
endif()
if(APPLE)
  configure_file(osx32/libsteam_api.dylib ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${SUBDIR}libsteam_api.dylib COPYONLY)
endif()
if(LINUX)
  configure_file(linux32/libsteam_api.so ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${SUBDIR}linux32/libsteam_api.so COPYONLY)
  configure_file(linux64/libsteam_api.so ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${SUBDIR}linux64/libsteam_api.so COPYONLY)
endif()

if(LINUX)
  set_target_properties(HiveMP.SteamTest PROPERTIES OUTPUT_NAME "HiveMP.SteamTest-exe")
endif()